# sugarbeet-weed-detection

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: yolo26n-p2-baseline.yaml  yolo26n.yaml  yolo26x-p2-baseline.yaml
scripts/: train.sh  val.sh
src/: predict.py  submit.py  train.py  val.py
tools/: analyze_bbox_sizes.py  bench_inference.py  convert_phenobench.py  sahi_val.py  sweep_conf.py
